--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <meta property="og:description" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
     <meta property="og:keywords"
         content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp">
-    <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp">
+    <!-- <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp"> -->
+    <!-- <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp"> -->
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:alt" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
     <meta property="og:image:width" content="980">
     <meta property="og:image:height" content="980">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <meta property="og:url" content="https://ulems.my.id">
+    <!-- <meta property="og:url" content="https://ulems.my.id"> -->
     <meta property="og:site_name" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
 
     <!-- Appearance -->
@@ -37,10 +37,10 @@
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="canonical" href="https://ulems.my.id/">
-    <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png">
-    <link rel="icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico">
+    <!-- <link rel="canonical" href="https://ulems.my.id/"> -->
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico"> -->
+    <!-- <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png"> -->
+    <!-- <link rel="icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico"> -->
 
     <!-- Preconnect CDN -->
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
@@ -96,8 +96,7 @@
 
 <!-- <html lang="id" data-bs-theme="auto"> ['auto', 'dark', 'light'] -->
 
-<body data-key="d9faced3377732b0edf19e90d1bde0cd5de04801c75eb41743" data-url="https://api.ulems.my.id/"
-    data-audio="./assets/music/pure-love-304010.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
+<body data-audio="./assets/music/pure-love-304010.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
