--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="position-relative bg-white-black d-flex justify-content-center align-items-center vh-100">
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
-                        <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
+                        <!-- <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
                                 data-src="https://picsum.photos/1000/1000?random=7" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
@@ -121,7 +121,7 @@
                             <img src="./assets/images/placeholder.webp"
                                 data-src="https://picsum.photos/1000/1000?random=9" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -303,7 +303,7 @@
                             <!-- Jika tidak ingin menggunakan video, hapus seluruh tag dengan id="video-love-story" di bawah ini. -->
                             <!-- If you don't want to use the video, remove the entire tag with id="video-love-story" below. -->
 
-                            <div id="video-love-stroy" class="position-relative rounded-4 mb-1 pb-0"
+                            <!-- <div id="video-love-stroy" class="position-relative rounded-4 mb-1 pb-0"
                                 data-src="./assets/video/265501_tiny.mp4"
                                 data-vid-class="w-100 rounded-4 shadow-sm m-0 p-0">
                                 <div class="position-absolute d-flex flex-column justify-content-center align-items-center top-50 start-50 translate-middle w-100 h-100 bg-overlay-auto rounded-4 z-3"
@@ -316,9 +316,9 @@
                                     <small class="mt-1 text-theme-auto bg-theme-auto py-0 px-2 rounded-4"
                                         id="progress-info-video-love-stroy" style="font-size: 0.7rem;"></small>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <div class="position-relative">
+                            <!-- <div class="position-relative">
                                 <div class="position-absolute d-flex justify-content-center align-items-center top-50 start-50 translate-middle w-100 h-100 bg-overlay-auto z-3"
                                     style="opacity: 100%; background-color: unset;">
                                     <button class="btn btn-outline-auto btn-sm rounded-4 shadow-sm"
@@ -399,7 +399,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </section>
@@ -484,12 +484,12 @@
                             <div class="d-flex justify-content-center align-items-center mb-3">
                                 <div class="shadow rounded-circle border border-secondary"
                                     style="width: 3rem; height: 3rem; background-color: white;"></div>
-                                <div class="shadow rounded-circle border border-secondary"
+                                <!-- <div class="shadow rounded-circle border border-secondary"
                                     style="width: 3rem; height: 3rem; background-color: aquamarine; margin-left: -1rem;">
-                                </div>
-                                <div class="shadow rounded-circle border border-secondary"
+                                </div> -->
+                                <!-- <div class="shadow rounded-circle border border-secondary"
                                     style="width: 3rem; height: 3rem; background-color: limegreen; margin-left: -1rem;">
-                                </div>
+                                </div> -->
                             </div>
                             <p style="font-size: 0.95rem;">Busana batik dan bersepatu.</p>
                         </div>
@@ -556,7 +556,7 @@
                                 </button>
                             </div>
 
-                            <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500"
+                            <!-- <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500"
                                 class="carousel slide mt-4" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="0"
@@ -599,7 +599,7 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </section>
