--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <!-- Common Tag -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Undangan Pernikahan Della dan Arsyad Secara Online</title>
+    <title>Wedding Della & Arsyad</title>
 
     <!-- SEO Tag -->
     <meta name="author" content="dewanakl">
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
-    <meta name="title" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
-    <meta name="description" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
+    <meta name="title" content="Wedding Della & Arsyad">
+    <meta name="description" content="Wedding Della & Arsyad">
     <meta name="keywords"
         content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <meta property="og:title" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
-    <meta property="og:description" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
+    <meta property="og:title" content="Wedding Della & Arsyad">
+    <meta property="og:description" content="Wedding Della & Arsyad">
     <meta property="og:keywords"
         content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
     <!-- <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp"> -->
     <!-- <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp"> -->
     <meta property="og:image:type" content="image/webp">
-    <meta property="og:image:alt" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
+    <meta property="og:image:alt" content="Wedding Della & Arsyad">
     <meta property="og:image:width" content="980">
     <meta property="og:image:height" content="980">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <!-- <meta property="og:url" content="https://ulems.my.id"> -->
-    <meta property="og:site_name" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
+    <meta property="og:site_name" content="Wedding Della & Arsyad">
 
     <!-- Appearance -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Website Undangan Pernikahan Della dan Arsyad Secara Online">
+    <meta name="apple-mobile-web-app-title" content="Wedding Della & Arsyad">
     <meta name="theme-color" content="#000000">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- <link rel="canonical" href="https://ulems.my.id/"> -->
     <!-- <link rel="shortcut icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
     <!-- <link rel="apple-touch-icon" sizes="192x192" href="https://ulems.my.id/assets/images/icon-192x192.png"> -->
     <!-- <link rel="icon" type="image/x-icon" href="https://ulems.my.id/assets/favicon.ico"> -->
 
@@ -107,21 +108,21 @@
             <div class="position-relative bg-white-black d-flex justify-content-center align-items-center vh-100">
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
-                        <!-- <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
+                        <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="https://picsum.photos/1000/1000?random=7" fetchpriority="high"
+                                data-src="./assets/images/bg.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="https://picsum.photos/1000/1000?random=8" fetchpriority="high"
+                                data-src="./assets/images/bg.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="https://picsum.photos/1000/1000?random=9" fetchpriority="high"
+                                data-src="./assets/images/bg.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
@@ -525,19 +526,19 @@
                                 <div class="carousel-inner rounded-4">
                                     <div class="carousel-item active">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=1" fetchpriority="high"
+                                            data-src="./assets/images/bg.webp" fetchpriority="high"
                                             decoding="async" alt="image 1" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=2" fetchpriority="high"
+                                            data-src="./assets/images/bg.webp" fetchpriority="high"
                                             decoding="async" alt="image 2" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=3" fetchpriority="high"
+                                            data-src="./assets/images/bg.webp" fetchpriority="high"
                                             decoding="async" alt="image 3" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
