--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <title>Wedding Della & Arsyad</title>
 
     <!-- SEO Tag -->
-    <meta name="author" content="dewanakl">
+    <meta name="author" content="aruno">
     <meta name="language" content="id">
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-image-preview:large">
     <meta name="title" content="Wedding Della & Arsyad">
     <meta name="description" content="Wedding Della & Arsyad">
-    <meta name="keywords"
-        content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
+    <!-- <meta name="keywords"
+        content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan"> -->
     <meta property="og:title" content="Wedding Della & Arsyad">
     <meta property="og:description" content="Wedding Della & Arsyad">
-    <meta property="og:keywords"
-        content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan">
-    <!-- <meta property="og:image" content="https://ulems.my.id/assets/images/bg.webp"> -->
-    <!-- <meta property="og:image:secure_url" content="https://ulems.my.id/assets/images/bg.webp"> -->
+    <!-- <meta property="og:keywords"
+        content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan"> -->
+    <meta property="og:image" content="./assets/images/bg2.webp">
+    <meta property="og:image:secure_url" content="./assets/images/bg2.webp">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:alt" content="Wedding Della & Arsyad">
     <meta property="og:image:width" content="980">
     <meta property="og:image:height" content="980">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <!-- <meta property="og:url" content="https://ulems.my.id"> -->
+    <meta property="og:url" content="https://weddingofarsyadmk.novitardella.com">
     <meta property="og:site_name" content="Wedding Della & Arsyad">
 
     <!-- Appearance -->
@@ -97,7 +97,8 @@
 
 <!-- <html lang="id" data-bs-theme="auto"> ['auto', 'dark', 'light'] -->
 
-<body data-audio="./assets/music/pure-love-304010.mp3" data-confetti="true" data-time="2025-11-08 08:00:00">
+<!-- <body data-audio="./assets/music/pure-love-304010.mp3" data-confetti="true" data-time="2025-11-08 08:00:00"> -->
+<body data-confetti="true" data-time="2025-11-08 08:00:00">
 
     <!-- Root Invitation -->
     <div class="row m-0 p-0 opacity-0" id="root">
@@ -110,17 +111,17 @@
                     <div class="position-relative overflow-hidden vw-100">
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="./assets/images/bg.webp" fetchpriority="high"
+                                data-src="./assets/images/bg2.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="./assets/images/bg.webp" fetchpriority="high"
+                                data-src="./assets/images/bg3.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/placeholder.webp"
-                                data-src="./assets/images/bg.webp" fetchpriority="high"
+                                data-src="./assets/images/bg4.webp" fetchpriority="high"
                                 decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                     </div>
@@ -526,19 +527,19 @@
                                 <div class="carousel-inner rounded-4">
                                     <div class="carousel-item active">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="./assets/images/bg.webp" fetchpriority="high"
+                                            data-src="./assets/images/bg5.webp" fetchpriority="high"
                                             decoding="async" alt="image 1" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="./assets/images/bg.webp" fetchpriority="high"
+                                            data-src="./assets/images/bg6.webp" fetchpriority="high"
                                             decoding="async" alt="image 2" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="./assets/images/bg.webp" fetchpriority="high"
+                                            data-src="./assets/images/bg7.webp" fetchpriority="high"
                                             decoding="async" alt="image 3" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
@@ -557,7 +558,7 @@
                                 </button>
                             </div>
 
-                            <!-- <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500"
+                            <div id="carousel-image-two" data-aos="fade-up" data-aos-duration="1500"
                                 class="carousel slide mt-4" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carousel-image-two" data-bs-slide-to="0"
@@ -571,19 +572,19 @@
                                 <div class="carousel-inner rounded-4">
                                     <div class="carousel-item active">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=4" fetchpriority="high"
+                                            data-src="./assets/images/bg8.webp" fetchpriority="high"
                                             decoding="async" alt="image 4" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=5" fetchpriority="high"
+                                            data-src="./assets/images/bg9.webp" fetchpriority="high"
                                             decoding="async" alt="image 5" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="./assets/images/placeholder.webp"
-                                            data-src="https://picsum.photos/1280/720?random=6" fetchpriority="high"
+                                            data-src="./assets/images/bg10.webp" fetchpriority="high"
                                             decoding="async" alt="image 6" class="d-block img-fluid cursor-pointer"
                                             onclick="undangan.guest.modal(this)">
                                     </div>
@@ -600,7 +601,97 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
-                            </div> -->
+                            </div>
+
+                            <div id="carousel-image-three" data-aos="fade-up" data-aos-duration="1500"
+                                class="carousel slide mt-4" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carousel-image-three" data-bs-slide-to="0"
+                                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carousel-image-three" data-bs-slide-to="1"
+                                        aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carousel-image-three" data-bs-slide-to="2"
+                                        aria-label="Slide 3"></button>
+                                </div>
+
+                                <div class="carousel-inner rounded-4">
+                                    <div class="carousel-item active">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg11.webp" fetchpriority="high"
+                                            decoding="async" alt="image 7" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg12.webp" fetchpriority="high"
+                                            decoding="async" alt="image 8" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg13.webp" fetchpriority="high"
+                                            decoding="async" alt="image 9" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                </div>
+
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-three"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+
+                                <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-three"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+
+                            <div id="carousel-image-four" data-aos="fade-up" data-aos-duration="1500"
+                                class="carousel slide mt-4" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carousel-image-four" data-bs-slide-to="0"
+                                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carousel-image-four" data-bs-slide-to="1"
+                                        aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carousel-image-four" data-bs-slide-to="2"
+                                        aria-label="Slide 3"></button>
+                                </div>
+
+                                <div class="carousel-inner rounded-4">
+                                    <div class="carousel-item active">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg14.webp" fetchpriority="high"
+                                            decoding="async" alt="image 10" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg15.webp" fetchpriority="high"
+                                            decoding="async" alt="image 11" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/images/placeholder.webp"
+                                            data-src="./assets/images/bg.webp" fetchpriority="high"
+                                            decoding="async" alt="image 12" class="d-block img-fluid cursor-pointer"
+                                            onclick="undangan.guest.modal(this)">
+                                    </div>
+                                </div>
+
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-image-four"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+
+                                <button class="carousel-control-next" type="button" data-bs-target="#carousel-image-four"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </section>
