--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 </section>
 
                 <!-- Gallery -->
-                <section class="bg-white-black pb-5 pt-3" id="gallery">
+                <!-- <section class="bg-white-black pb-5 pt-3" id="gallery">
                     <div class="container">
                         <div class="border rounded-5 shadow p-3">
 
@@ -355,60 +355,48 @@
 
                             <div class="container mt-3">
                                 <div class="row">
-                                    <!-- Column 1 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg5.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
-                                    <!-- Column 2 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg6.webp" class="img-fluid rounded" alt="Image 2">
                                     </div>
-                                    <!-- Column 3 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg7.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    <!-- Column 1 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg8.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
-                                    <!-- Column 2 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg9.webp" class="img-fluid rounded" alt="Image 2">
                                     </div>
-                                    <!-- Column 3 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg10.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
                                 </div>
-                                
+
                                 <div class="row">
-                                    <!-- Column 1 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg11.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
-                                    <!-- Column 2 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg12.webp" class="img-fluid rounded" alt="Image 2">
                                     </div>
-                                    <!-- Column 3 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg13.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
                                 </div>
-                                
+
                                 <div class="row">
-                                    <!-- Column 1 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg14.webp" class="img-fluid rounded" alt="Image 1">
                                     </div>
-                                    <!-- Column 2 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg15.webp" class="img-fluid rounded" alt="Image 2">
                                     </div>
-                                    <!-- Column 3 -->
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg.webp" class="img-fluid rounded" alt="Image 3">
                                     </div>
@@ -416,7 +404,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Wave Separator -->
                 <div class="svg-wrapper">
@@ -426,48 +414,11 @@
                     </svg>
                 </div>
 
-                <!-- Comment -->
-                <section class="bg-light-dark my-0 pb-0 pt-3" id="comment">
-                    <div class="container">
-                        <!-- Comments -->
-                        <div class="py-3" id="comments" data-loading="false"></div>
-
-                        <!-- Pagination -->
-                        <nav class="d-flex d-none justify-content-center mt-1 mb-0" id="pagination"></nav>
-                    </div>
-                </section>
-
-                <!-- Wave Separator -->
-                <div class="svg-wrapper">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="color-theme-svg no-gap-bottom">
-                        <path fill="currentColor" fill-opacity="1" d="M0,224L34.3,234.7C68.6,245,137,267,206,266.7C274.3,267,343,245,411,234.7C480,224,549,224,617,213.3C685.7,203,754,181,823,197.3C891.4,213,960,267,1029,266.7C1097.1,267,1166,213,1234,192C1302.9,171,1371,181,1406,186.7L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
-                        </path>
-                    </svg>
-                </div>
-
                 <!-- End Of Invitation -->
-                <section class="bg-white-black py-2 no-gap-bottom">
+                <section class="bg-light-dark py-2 no-gap-bottom">
                     <div class="container text-center">
-                        <p class="pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda,
-                            yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
-
-                        <h2 class="font-esthetic" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh
-                        </h2>
-                        <h2 class="font-arabic pt-4" style="font-size: 2rem;">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ
-                        </h2>
-
-                        <hr class="my-3">
-
-                        <div class="row align-items-center justify-content-between flex-column pb-3">
-                            <div class="col-auto">
-                                <small>Build with<i class="fa-solid fa-heart mx-1"></i>Dewanakl</small>
-                            </div>
-                            <div class="col-auto">
-                                <small><i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">github</a></small>
-                                <small><i class="fa-solid fa-chart-simple me-1"></i><a target="_blank" href="https://status.ulems.my.id">status</a></small>
-                                <small><i class="fa-solid fa-music me-1"></i><a target="_blank" href="https://pixabay.com/music/modern-classical-pure-love-304010">music</a></small>
-                            </div>
-                        </div>
+                        <p class="pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda, yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
+                        <h2 class="font-esthetic" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
                     </div>
                 </section>
             </main>
@@ -551,12 +502,6 @@
                 <noscript>
                     <small class="mt-1 text-danger">Sorry, this invitation requires javascript to work</small>
                 </noscript>
-            </div>
-        </div>
-        <div class="text-center position-fixed w-100" style="bottom: 8%; left: 0;">
-            <div class="d-flex flex-column">
-                <small class="text-secondary">from</small>
-                <small class="text-theme-auto"><i class="fa-brands fa-github me-1"></i>dewanakl</small>
             </div>
         </div>
     </div>
