--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/bg2.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
-                        <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
+                        <!-- <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/bg3.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
                             <img src="./assets/images/bg4.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
