--- a/index.html
+++ b/index.html
@@ -358,6 +358,24 @@
                             <div class="container mt-3">
                                 <div class="row">
                                     <div class="mb-1">
+                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
+                                    </div>
+                                    <div class="mb-1">
+                                        <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
+                                    </div>
+                                </div>
+                                
+                                <!-- <div class="row">
+                                    <div class="mb-1">
                                         <img src="./assets/images/bg2.webp" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
@@ -372,7 +390,7 @@
                                     <div class="mb-1">
                                         <img src="./assets/images/bg15.webp" class="img-fluid rounded">
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
