--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta property="og:description" content="Wedding Della & Arsyad">
     <!-- <meta property="og:keywords"
         content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan"> -->
-    <meta property="og:image" content="https://media.discordapp.net/attachments/1126797485277458445/1424650187489546310/bg2.webp?ex=68e4b861&is=68e366e1&hm=046846cfafdf6b77a151b83071bac6a9dd63071dd32a5882005e5c41ea2c18af&=&format=webp&width=725&height=544">
-    <meta property="og:image:secure_url" content="https://media.discordapp.net/attachments/1126797485277458445/1424650187489546310/bg2.webp?ex=68e4b861&is=68e366e1&hm=046846cfafdf6b77a151b83071bac6a9dd63071dd32a5882005e5c41ea2c18af&=&format=webp&width=725&height=544">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&">
+    <meta property="og:image:secure_url" content="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&">
     <meta property="og:image:type" content="image/webp">
     <meta property="og:image:alt" content="Wedding Della & Arsyad">
     <meta property="og:image:width" content="980">
@@ -104,16 +104,17 @@
                 <div class="d-flex position-absolute w-100 h-100">
                     <div class="position-relative overflow-hidden vw-100">
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187489546310/bg2.webp?ex=68e4b861&is=68e366e1&hm=046846cfafdf6b77a151b83071bac6a9dd63071dd32a5882005e5c41ea2c18af&=&format=webp&width=725&height=544" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
-                            <!-- <img src="https://picsum.photos/id/114/1000/1000" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;"> -->
-                            <!-- <div class="bg-light-dark"></div> -->
-                        </div>
-                        <!-- <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="./assets/images/bg3.webp" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
                         </div>
                         <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
-                            <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187803983892/bg4.webp?ex=68e4b861&is=68e366e1&hm=06057a888351338efa3dd4b1f9ebdeecb7c4b11416d301aa17db1e9b3e30b5a0&=&format=webp&width=725&height=544" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
-                        </div> -->
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657612569448539/bg10.webp?ex=68e4bf4b&is=68e36dcb&hm=7133eb79b6146dfac3d286511ec8a05193893d1ff0919a2f5073c68a28094fdc&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                        </div>
+                        <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657710296596500/bg4.webp?ex=68e4bf62&is=68e36de2&hm=b68c6b3c63489b00ce60b83bcced7e75c6a072709bf30a6228888e661f386b0b&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                        </div>
+                        <div class="position-absolute h-100 w-100 slide-desktop" style="opacity: 0;">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" fetchpriority="high" decoding="async" alt="bg" class="bg-cover-home" style="mask-image: none; opacity: 30%;">
+                        </div>
                     </div>
                 </div>
 
@@ -131,13 +132,13 @@
 
                 <!-- Home -->
                 <section id="home" class="bg-light-dark position-relative overflow-hidden p-0 m-0">
-                    <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650804895154256/bg14.webp?ex=68e4b8f4&is=68e36774&hm=f98f418c5345617ada56a8c9bea76081d5984c6c8ba2ea1d5dbd585195365b15&=&format=webp&width=736&height=552" fetchpriority="high" decoding="async" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
+                    <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" fetchpriority="high" decoding="async" alt="bg" class="position-absolute opacity-25 top-50 start-50 translate-middle bg-cover-home">
 
                     <div class="position-relative text-center bg-overlay-auto" style="background-color: unset;">
                         <h1 class="font-esthetic pt-5 pb-4 fw-medium" style="font-size: 2.25rem;">Undangan Pernikahan
                         </h1>
 
-                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187187552408/bg.webp?ex=68e4b861&is=68e366e1&hm=35a274e25acf28b7c37d5ea5971c29c83d0d0ae26d2d8a33c43a073075bbdc05&=&format=webp&width=725&height=544" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="bg" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
 
                         <h2 class="font-esthetic my-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                         <p class="my-2" style="font-size: 1.25rem;">Sabtu, 8 November 2025</p>
@@ -179,7 +180,7 @@
                         </div>
 
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650189452480602/cewe.webp?ex=68e4b861&is=68e366e1&hm=4871420e34f41d7fc686dfea91b7aa4a9bc4a020eb0b10d3bb23c93aaa16ec9c&=&format=webp&width=544&height=544" fetchpriority="high" decoding="async" alt="cewe" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657929419755640/cewe.webp?ex=68e4bf97&is=68e36e17&hm=71a677f868a494894024108cbfca0d5de59c30fc24a195855cfec5d3292a3235&" fetchpriority="high" decoding="async" alt="cewe" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Novita Rizkia Della Khairunnisa</h2>
@@ -212,7 +213,7 @@
                         </div>
 
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
-                            <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650189796278364/cowo.webp?ex=68e4b861&is=68e366e1&hm=71832b0ad3575dd5f3cea117adcebf88b8a29a8fec96ffd56e44d9edf3a60692&=&format=webp&width=544&height=544" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
+                            <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657984654409728/cowo.webp?ex=68e4bfa4&is=68e36e24&hm=f0f0f74d9a2b4a923ed19f5705981370b10c4f76a865509cbcba67feffd70a43&" fetchpriority="high" decoding="async" alt="cowo" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto cursor-pointer">
                         </div>
                         <div data-aos="fade-up" data-aos-duration="2000" class="pb-1">
                             <h2 class="font-esthetic m-0" style="font-size: 2.125rem;">Arsyad Muhammad Khoiri</h2>
@@ -376,31 +377,31 @@
                                 
                                 <div class="row">
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187489546310/bg2.webp?ex=68e4b861&is=68e366e1&hm=046846cfafdf6b77a151b83071bac6a9dd63071dd32a5882005e5c41ea2c18af&=&format=webp&width=725&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187803983892/bg4.webp?ex=68e4b861&is=68e366e1&hm=06057a888351338efa3dd4b1f9ebdeecb7c4b11416d301aa17db1e9b3e30b5a0&=&format=webp&width=725&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657710296596500/bg4.webp?ex=68e4bf62&is=68e36de2&hm=b68c6b3c63489b00ce60b83bcced7e75c6a072709bf30a6228888e661f386b0b&" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650188106104902/bg5.webp?ex=68e4b861&is=68e366e1&hm=919a1f34a3fe0b2b720c5c8618ffd6bc8fad8526f523ca88d2a1429a55518bf7&=&format=webp&width=725&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658100945686618/bg5.webp?ex=68e4bfc0&is=68e36e40&hm=909973992ff675da16906f5b08386a37ba89ebc3e4e0520170128d971d200603&" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650188429070400/bg6.webp?ex=68e4b861&is=68e366e1&hm=84604bc06f01729a38e9b62ebbe70525da367c52e609373281589839c9edcfb3&=&format=webp&width=725&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658189122801715/bg6.webp?ex=68e4bfd5&is=68e36e55&hm=cbc81d8fda05875f40e2d61e59ceb025b3b1e7c8b6c504c9d0c81b119f770adc&" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650188793839726/bg7.webp?ex=68e4b861&is=68e366e1&hm=129ee170747a94424d247ec9cdc62d176d857a5d766017fe74e78e0797fd2bdc&=&format=webp&width=508&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658252120981514/bg7.webp?ex=68e4bfe4&is=68e36e64&hm=7f1c1b3865342ab62c0033c2fc998f751aea94d1653446a44498446d5ae496fb&" class="img-fluid rounded">
                                     </div>
                                     <div class="mb-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650189121126430/bg15.webp?ex=68e4b861&is=68e366e1&hm=6ed0d6d811441ba630a96e54a7fc94c99dc2cae317e57faf341aada38bfe25e0&=&format=webp&width=552&height=544" class="img-fluid rounded">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658316440895599/bg15.webp?ex=68e4bff3&is=68e36e73&hm=fc5cd23390bd797515ea8075fc7e6647f913aca655ce72d913bd502671f77f7c&" class="img-fluid rounded">
                                     </div>
                                 </div>
 
                                 <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650188106104902/bg5.webp?ex=68e4b861&is=68e366e1&hm=919a1f34a3fe0b2b720c5c8618ffd6bc8fad8526f523ca88d2a1429a55518bf7&=&format=webp&width=725&height=544" class="img-fluid rounded" alt="Image 1">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658100945686618/bg5.webp?ex=68e4bfc0&is=68e36e40&hm=909973992ff675da16906f5b08386a37ba89ebc3e4e0520170128d971d200603&" class="img-fluid rounded" alt="Image 1">
                                     </div>
                                     <div class="col-4 mb-3 px-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650188429070400/bg6.webp?ex=68e4b861&is=68e366e1&hm=84604bc06f01729a38e9b62ebbe70525da367c52e609373281589839c9edcfb3&=&format=webp&width=725&height=544" class="img-fluid rounded" alt="Image 2">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658189122801715/bg6.webp?ex=68e4bfd5&is=68e36e55&hm=cbc81d8fda05875f40e2d61e59ceb025b3b1e7c8b6c504c9d0c81b119f770adc&" class="img-fluid rounded" alt="Image 2">
                                     </div>
                                     <div class="col-4 mb-3 px-1">
                                         <img src="./assets/images/bg7.webp" class="img-fluid rounded" alt="Image 3">
@@ -433,10 +434,10 @@
 
                                 <!-- <div class="row">
                                     <div class="col-4 mb-3 px-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650804895154256/bg14.webp?ex=68e4b8f4&is=68e36774&hm=f98f418c5345617ada56a8c9bea76081d5984c6c8ba2ea1d5dbd585195365b15&=&format=webp&width=736&height=552" class="img-fluid rounded" alt="Image 1">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657824088064022/bg14.webp?ex=68e4bf7e&is=68e36dfe&hm=57fe9f3f07944ccb382d219ed40723dc2d71882f5541ce6ab0bc3b9ea94fdd5f&" class="img-fluid rounded" alt="Image 1">
                                     </div>
                                     <div class="col-4 mb-3 px-1">
-                                        <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650189121126430/bg15.webp?ex=68e4b861&is=68e366e1&hm=6ed0d6d811441ba630a96e54a7fc94c99dc2cae317e57faf341aada38bfe25e0&=&format=webp&width=552&height=544" class="img-fluid rounded" alt="Image 2">
+                                        <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424658316440895599/bg15.webp?ex=68e4bff3&is=68e36e73&hm=fc5cd23390bd797515ea8075fc7e6647f913aca655ce72d913bd502671f77f7c&" class="img-fluid rounded" alt="Image 2">
                                     </div>
                                     <div class="col-4 mb-3 px-1">
                                         <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187187552408/bg.webp?ex=68e4b861&is=68e366e1&hm=35a274e25acf28b7c37d5ea5971c29c83d0d0ae26d2d8a33c43a073075bbdc05&=&format=webp&width=725&height=544" class="img-fluid rounded" alt="Image 3">
@@ -502,7 +503,7 @@
             <div class="d-flex flex-column text-center">
                 <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">The Wedding Of</h2>
 
-                <img src="https://media.discordapp.net/attachments/1126797485277458445/1424650187489546310/bg2.webp?ex=68e4b861&is=68e366e1&hm=046846cfafdf6b77a151b83071bac6a9dd63071dd32a5882005e5c41ea2c18af&=&format=webp&width=725&height=544" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
+                <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
                 <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
