--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
     <!-- Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
+    <link href="https://fonts.cdnfonts.com/css/darleston" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/amiri" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/lora-4" rel="stylesheet">
 
     <!-- Dependencies CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" integrity="sha256-2FMn2Zx6PuH5tdBQDRNwrOo60ts5wWPC9R8jK67b3t4=" crossorigin="anonymous">
@@ -168,8 +171,8 @@
                 <!-- Bride -->
                 <section class="bg-white-black text-center pb-4" id="bride">
                     <h2 class="font-arabic py-4 m-0" style="font-size: 2rem;">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</h2>
-                    <h2 class="font-esthetic py-4 m-0" style="font-size: 2rem;">Assalamualaikum Warahmatullahi Wabarakatuh</h2>
-                    <p class="pb-4 px-2 m-0" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, kami mengundang Anda untuk berkenan menghadiri acara pernikahan kami:</p>
+                    <h2 class="font-amiri py-4 m-0" style="font-size: 2rem;">Assalamualaikum Warahmatullahi Wabarakatuh</h2>
+                    <p class="font-lora pb-4 px-2 m-0" style="font-size: 0.95rem;">Tanpa mengurangi rasa hormat, kami mengundang Anda untuk berkenan menghadiri acara pernikahan kami:</p>
 
                     <div class="position-relative">
                         <!-- Love animation -->
@@ -374,7 +377,7 @@
                                         <img src="https://picsum.photos/1000/1000" class="img-fluid rounded">
                                     </div>
                                 </div> -->
-                                
+
                                 <div class="row">
                                     <div class="mb-1">
                                         <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" class="img-fluid rounded">
@@ -459,8 +462,8 @@
                 <!-- End Of Invitation -->
                 <section class="bg-light-dark py-2 no-gap-bottom">
                     <div class="container text-center">
-                        <p class="pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda, yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
-                        <h2 class="font-esthetic" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
+                        <p class="font-lora pb-2 pt-4" style="font-size: 0.95rem;">Terima kasih atas perhatian dan doa restu Anda, yang menjadi kebahagiaan serta kehormatan besar bagi kami.</p>
+                        <h2 class="font-amiri" style="font-size: 2rem;">Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
                     </div>
                 </section>
             </main>
@@ -505,7 +508,7 @@
 
                 <img src="https://cdn.discordapp.com/attachments/1126797485277458445/1424657351197069352/bg2.webp?ex=68e4bf0d&is=68e36d8d&hm=f9fb0180e3088b871152e0942596c601d88e1510839083412eec4d56af528a29&" fetchpriority="high" decoding="async" alt="background" class="img-center-crop rounded-circle border border-3 border-light shadow mb-4 mx-auto">
 
-                <h2 class="font-esthetic mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
+                <h2 class="font-darleston mb-4" style="font-size: 2.25rem;">Della &amp; Arsyad</h2>
                 <div id="guest-name" data-message="Kepada Yth Bapak/Ibu/Saudara/i"></div>
 
                 <button type="button" class="btn btn-light shadow rounded-4 mt-3 mx-auto" onclick="undangan.guest.open(this)"><i class="fa-solid fa-envelope-open fa-bounce me-2"></i>Open Invitation</button>
